--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,56 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  width: 100%;
+  height: 100%;
+  background-color: #1b263b;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+h1 {
+  text-align: center;
+  color: #d8d4cf;
+}
+
+.map-container {
+  display: flex;
+  justify-content: center;
+}
+
+app-map {
+  height: 90vh;
+  width: 90vw;
+  display: block;
+}
+
+app-map svg {
+  width: 100%;
+  height: 100%;
+}
+
+.allPath {
+  fill: #d3d3d3;
+  stroke: #ffffff;
+  transition: fill 0.2s ease;
+}
+
+table {
+  text-align: left;
+  text-transform: uppercase;
+  border-spacing: 15px;
+  color: #d8d4cf;
+}
+
+td {
+  font-weight: lighter;
+}
+
+.hovered {
+  fill: #3498db;
+}
+
+app-country-data {
+  height: 40vh;
+  width: 20vw;
+}
